Adicionar gerenciamento de rota e suporte de configuração
Program.cs atualizado para incluir RouteSettingService em DI, permitindo o carregamento e a impressão de rota na inicialização. Appsettings.Development.json modificado para definir RouteSettings para módulos e rotas. Vcs.xml adicionado para configurações de controle de versão. Classes AppModuleEsistem e AppRouteModuleEsistem introduzidas para representação de módulo. RouteEndpointSettings aprimorado para gerenciar módulos de rota e RouteSettingService implementado para carregar configurações de JSON.

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -11,6 +11,38 @@
     // You must specify an email address to register with the certificate authority
     "EmailAddress": "devel@esistem.com.br"
   },
+  "RouteSettings": {
+    "Modules": [
+      {
+        "ModuleEsistem": {
+          "AppModuleId": "app_cadastro",
+          "Description": "Módulo de cadastro do eSistem. Pessoas, Categorias, etc."
+        },
+        "AppRouteModulesEsistem": [
+          {
+            "Path": "cadastro/categoria/incluir"
+          },
+          {
+            "Path": "cadastro/categoria/atualizar"
+          }
+        ]
+      },
+      {
+        "ModuleEsistem": {
+          "AppModuleId": "app_categorias",
+          "Description": "Módulo de categorias do eSistem."
+        },
+        "AppRouteModulesEsistem": [
+          {
+            "Path": "cadastro/categoria/incluir"
+          },
+          {
+            "Path": "cadastro/categoria/atualizar"
+          }
+        ]
+      }
+    ]
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
