Refatorar a estrutura e a configuração das configurações de rota
Atualização do carregamento de rota em Program.cs para usar RouteSettingsEsistem.
Substituição de RouteModuleModelEsistem por RouteSettingsEsistem em
RouteEndpointSettings.cs e remoção da classe anterior. Ajuste de
RouteSettingService para alinhar com a nova estrutura e atualização de
appsettings.Development.json para refletir a nova convenção de nomenclatura.
Criação de RouteSettingsEsistem.cs para encapsular as configurações de rota
de forma mais eficaz.

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -11,7 +11,7 @@
     // You must specify an email address to register with the certificate authority
     "EmailAddress": "devel@esistem.com.br"
   },
-  "RouteSettings": {
+  "RouteSettingsEsistem": {
     "Modules": [
       {
         "ModuleEsistem": {
