Refatorar o sistema de roteamento e gerenciamento de módulos
Este commit introduz uma refatoração significativa do sistema de roteamento e gerenciamento de módulos. As principais mudanças incluem:

- `Program.cs` atualizado para usar a nova estrutura `RouteModules` para melhor organização de módulos e rotas.
- Propriedades `AppModuleEsistem` modificadas para `públicas` e renomeadas para maior clareza.
- Classe `AppRouteModuleEsistem` removida para simplificar a representação de rotas.
- `RouteSettingService` aprimorado com um novo método, `CleanRouteAndNameEmpty`, para filtrar rotas e módulos inválidos.
- `RouteSettingsEsistem` reestruturado para gerenciar módulos diretamente sem a classe `RouteModuleModelEsistem`.
- `appsettings.Development.json` atualizado para refletir a nova estrutura de roteamento.
- Classe `ConfigurationExtension` introduzida para recuperação mais fácil da seção de configuração.
- Adicionadas novas classes `AppModuleRoute`, `RouteEsistem` e `RouteModules` para encapsular a nova estrutura de roteamento.

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -11,14 +11,14 @@
     // You must specify an email address to register with the certificate authority
     "EmailAddress": "devel@esistem.com.br"
   },
-  "RouteSettingsEsistem": {
+  "RouteModules": {
     "Modules": [
       {
-        "ModuleEsistem": {
-          "AppModuleId": "app_cadastro",
+        "Module": {
+          "Name": "app_cadastros",
           "Description": "Módulo de cadastro do eSistem. Pessoas, Categorias, etc."
         },
-        "AppRouteModulesEsistem": [
+        "Route": [
           {
             "Path": "cadastro/categoria/incluir"
           },
@@ -28,11 +28,11 @@
         ]
       },
       {
-        "ModuleEsistem": {
-          "AppModuleId": "app_categorias",
+        "Module": {
+          "Name": "app_categorias",
           "Description": "Módulo de categorias do eSistem."
         },
-        "AppRouteModulesEsistem": [
+        "Route": [
           {
             "Path": "cadastro/categoria/incluir"
           },
